--- a/project/SPTarkov.Launcher/Dialogs/Server/ServerLoginDialog.razor
+++ b/project/SPTarkov.Launcher/Dialogs/Server/ServerLoginDialog.razor
@@ -79,27 +79,27 @@
                 // Causes an exception that I cant fix.
                 // Do it only on Ping so its done once and doesnt look like a blank box
                 await Task.Delay(250);
-                var returnResult = await HttpHelper.GameServerGet<PingResponse>(RequestUrl.Ping, Token.Token);
+                var returnResult = await HttpHelper.GameServerGet<PingResponse>(RequestUrls.Ping, Token.Token);
                 result = returnResult.Response == "Pong!";
                 break;
             }
             case RequestTask.Profiles:
             {
-                var returnResult = await HttpHelper.GameServerGet<ProfilesResponse>(RequestUrl.Profiles, Token.Token);
+                var returnResult = await HttpHelper.GameServerGet<ProfilesResponse>(RequestUrls.Profiles, Token.Token);
                 StateHelper.ProfileList = returnResult?.Response!;
                 result = true;
                 break;
             }
             case RequestTask.Types:
             {
-                var returnResult = await HttpHelper.GameServerGet<TypesResponse>(RequestUrl.Types, Token.Token);
+                var returnResult = await HttpHelper.GameServerGet<TypesResponse>(RequestUrls.Types, Token.Token);
                 StateHelper.ProfileTypes = returnResult?.Response!;
                 result = true;
                 break;
             }
             case RequestTask.Mods:
             {
-                var returnResult = await HttpHelper.GameServerGet<ModsResponse>(RequestUrl.Mods, Token.Token);
+                var returnResult = await HttpHelper.GameServerGet<ModsResponse>(RequestUrls.Mods, Token.Token);
                 StateHelper.ModList = returnResult?.Response!;
                 result = true;
                 break;
