--- a/project/SPTarkov.Launcher/Components/Profiles/ProfileCardComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Profiles/ProfileCardComponent.razor
@@ -1,4 +1,5 @@
-﻿@inject IDialogService DialogService
+﻿@using SPTarkov.Core.SPT
+@inject IDialogService DialogService
 @inject ConfigHelper ConfigHelper
 @inject StateHelper StateHelper
 @inject NavigationManager NavigationManager
