--- a/project/SPTarkov.Launcher/Pages/ModLoader.razor
+++ b/project/SPTarkov.Launcher/Pages/ModLoader.razor
@@ -1,6 +1,7 @@
 ﻿@page "/ModLoader"
+@using SPTarkov.Core.Mods
 
-@inject DownloadHelper DownloadHelper
+@inject ModManager ModManager
 
 <MudContainer Class="px-4 my-2 page-animation-switch" MaxWidth="MaxWidth.Large" Style="height: 96vh;">
     <MudGrid Spacing="4" Justify="Justify.SpaceEvenly" Class=" mud-height-full">
