--- a/project/SPTarkov.Launcher/_Imports.razor
+++ b/project/SPTarkov.Launcher/_Imports.razor
@@ -20,7 +20,7 @@
 @using SPTarkov.Core.Helpers
 @using SPTarkov.Core.Configuration
 @using SPTarkov.Core.Forge
-@using SPTarkov.Core.Spt
+@using SPTarkov.Core.SPT
 
 @using SPTarkov.Launcher.Shared
 @using SPTarkov.Launcher.Dialogs.Profile
