--- a/project/SPTarkov.Launcher/Components/Profiles/Profile/ProfileStatsComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Profiles/Profile/ProfileStatsComponent.razor
@@ -1,4 +1,5 @@
-﻿<MudItem sm="8">
+﻿@using SPTarkov.Core.SPT
+<MudItem sm="8">
     <MudTabs Centered="true" Color="Color.Dark" Elevation="2" Rounded="true" ApplyEffectsToContainer="true" PanelClass="pa-2" Class="mud-background-gray border-2 border-solid mud-border-lines-default card-container info-card-height">
         <MudTabPanel Text="Overall">
             <MudContainer>
