--- a/project/SPTarkov.Launcher/Dialogs/Profile/ProfileRemoveDialog.razor
+++ b/project/SPTarkov.Launcher/Dialogs/Profile/ProfileRemoveDialog.razor
@@ -1,4 +1,5 @@
-﻿@inject ISnackbar Snackbar
+﻿@using SPTarkov.Core.SPT
+@inject ISnackbar Snackbar
 @inject StateHelper StateHelper
 @inject HttpHelper HttpHelper
 @inject LocaleHelper LocaleHelper
@@ -35,7 +36,7 @@
 
     private bool _requestInProgress;
     private string _taskText = "";
-    private LoginRequest Request { get; } = new();
+    private SPTLoginRequest Request { get; } = new();
     private CancellationTokenSource Token { get; set; }
     private bool UserCancel { get; set; }
 
@@ -85,7 +86,7 @@
             StateHasChanged();
             await Task.Delay(20);
 
-            var returnResult = await HttpHelper.GameServerPut<RemoveResponse>(RequestUrls.Remove, Request, Token.Token);
+            var returnResult = await HttpHelper.GameServerPut<SPTRemoveResponse>(RequestUrls.Remove, Request, Token.Token);
             StateHelper.ProfileList = returnResult.Profiles;
             var result = returnResult.Response;
 
