--- a/project/SPTarkov.Launcher/Shared/MainLayout.razor
+++ b/project/SPTarkov.Launcher/Shared/MainLayout.razor
@@ -1,10 +1,11 @@
 ﻿@inherits LayoutComponentBase
 
+@using SPTarkov.Core.Mods
 @implements IDisposable
 
 @inject StateHelper StateHelper
 @inject ConfigHelper ConfigHelper
-@inject DownloadHelper DownloadHelper
+@inject ModManager ModManager
 
 <MudThemeProvider IsDarkMode="true"/>
 <MudPopoverProvider/>
@@ -15,7 +16,7 @@
     <MudFab Color="Color.Dark" StartIcon="@Icons.Material.Filled.ArrowCircleUp" Size="Size.Small"/>
 </MudScrollToTop>
 
-@if (DownloadHelper.GetDownloadTasks().Any() && StateHelper.ShowDownloads)
+@if (ModManager.GetDownloadTasks().Any() && StateHelper.ShowDownloads)
 {
     <DownloadComponent/>
 }
