--- a/project/SPTarkov.Launcher/Dialogs/Profile/ProfileLoginDialog.razor
+++ b/project/SPTarkov.Launcher/Dialogs/Profile/ProfileLoginDialog.razor
@@ -1,5 +1,4 @@
-﻿@using SPTarkov.Core.SPT
-@inject ISnackbar Snackbar
+﻿@inject ISnackbar Snackbar
 @inject HttpHelper HttpHelper
 @inject LocaleHelper LocaleHelper
 
