--- a/project/SPTarkov.Launcher/Shared/NavMenu.razor
+++ b/project/SPTarkov.Launcher/Shared/NavMenu.razor
@@ -1,5 +1,4 @@
-﻿@using SPTarkov.Core.Mods
-@implements IDisposable
+﻿@implements IDisposable
 
 @inject LocaleHelper LocaleHelper
 @inject StateHelper StateHelper
