--- a/project/SPTarkov.Launcher/_Imports.razor
+++ b/project/SPTarkov.Launcher/_Imports.razor
@@ -21,6 +21,7 @@
 @using SPTarkov.Core.Configuration
 @using SPTarkov.Core.Forge
 @using SPTarkov.Core.SPT
+@using SPTarkov.Core.Mods
 
 @using SPTarkov.Launcher.Shared
 @using SPTarkov.Launcher.Dialogs.Profile
