--- a/project/SPTarkov.Launcher/_Imports.razor
+++ b/project/SPTarkov.Launcher/_Imports.razor
@@ -22,6 +22,10 @@
 @using SPTarkov.Core.Forge
 @using SPTarkov.Core.SPT
 @using SPTarkov.Core.Mods
+@using SPTarkov.Core.SPT.Requests
+@using SPTarkov.Core.SPT.Responses
+@using SPTarkov.Core.Forge.Requests
+@using SPTarkov.Core.Forge.Responses
 
 @using SPTarkov.Launcher.Shared
 @using SPTarkov.Launcher.Dialogs.Profile
