Log issue with modVersions returning 400

--- a/project/SPTarkov.Launcher/Pages/ForgeMod.razor
+++ b/project/SPTarkov.Launcher/Pages/ForgeMod.razor
@@ -64,6 +64,11 @@
             return;
         }
 
+        if (!VersionResponse!.Success)
+        {
+            Logger.LogError("Getting Mod version failed {modId}:{versionId} for reason: {code}:{message}", modId, versionId, VersionResponse.Code, VersionResponse.Message);
+        }
+
         StateHasChanged();
     }
 }
