allow navigating to dependency

--- a/project/SPTarkov.Launcher/Components/Forge/DetailedModComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Forge/DetailedModComponent.razor
@@ -202,4 +202,9 @@
         NavigationManager.NavigateTo("/Forge");
     }
 
+    private void NavigateToDependency(int? depId)
+    {
+        NavigationManager.NavigateTo("/ForgeMod/" + depId, true);
+    }
+
 }
