pass whole mod instead of parts

--- a/project/SPTarkov.Launcher/Components/Forge/DetailedModComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Forge/DetailedModComponent.razor
@@ -177,13 +177,10 @@
         var param = new DialogParameters
         {
             {
-                "Name", ForgeMod.Name
+                "Mod", ForgeMod
             },
             {
-                "VersionDescription", ForgeModVersion?.Description
-            },
-            {
-                "VersionLink", ForgeModVersion?.Link
+                "Version", ForgeModVersion
             }
         };
 
