--- a/project/SPTarkov.Launcher/Dialogs/Forge/ForgeDownloadDialog.razor
+++ b/project/SPTarkov.Launcher/Dialogs/Forge/ForgeDownloadDialog.razor
@@ -11,7 +11,7 @@
             </MudPaper>
             <MudPaper Class="mud-background-gray border-2 border-solid mud-border-lines-default mb-4 pa-2">
                 <MudText Class="user-markdown">
-                    @((MarkupString)VersionDescription)
+                    @((MarkupString)Version.Description)
                 </MudText>
             </MudPaper>
             <MudContainer Class="mb-4 pa-0">
@@ -24,9 +24,8 @@
 
 @code {
     [CascadingParameter] private IMudDialogInstance MudDialog { get; set; }
-    [Parameter] public string Name { get; set; }
-    [Parameter] public string VersionDescription { get; set; }
-    [Parameter] public string VersionLink { get; set; }
+    [Parameter] public ForgeBase Mod { get; set; }
+    [Parameter] public ForgeModVersion Version { get; set; }
     private bool _requestInProgress;
     private CancellationTokenSource Token { get; set; }
     private bool UserCancel { get; set; }
@@ -48,10 +47,10 @@
         try
         {
             // TODO: atm we dont do anything with cancellationToken.
-            if (!ModManager.AddDownloadTask(Name, VersionLink, Token))
+            if (!ModManager.StartModDownload(Mod, Version, Token))
             {
-                Logger.LogError("Unable to add download task, name: {name}, url: {url}", Name, VersionLink);
-                Snackbar.Add($"Unable to download {Name}", Severity.Error);
+                Logger.LogError("Unable to add download task, name: {name}, url: {url}", Mod.Name, Version.Link);
+                Snackbar.Add($"Unable to download {Mod.Name}", Severity.Error);
             }
         }
         catch (TaskCanceledException) when (Token.IsCancellationRequested)
@@ -79,7 +78,7 @@
 
     private void Submit()
     {
-        Snackbar.Add($"Download started for {Name}", Severity.Success);
+        Snackbar.Add($"Download started for {Mod.Name}", Severity.Success);
         MudDialog.Close();
     }
 
